[package]
name = "ssh-config-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssh-config"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["std", "serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
