[package]
name = "ssh-config-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssh-config"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["std", "serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
